src/test/deca/context/valid/obj/declparam/test_param.deca
// Description:
//    declaration d'une methode avec des parametres
//
// Resultats:
//
// 
// Historique:
//    cree le 01/01/2024

class A{
    int a;
    void b(int a, float b, boolean c){
    }
}

class B{
    A a = new A();
}
