src/test/deca/context/invalid/obj/declmethod/test_same_field.deca
// Description:
//    declaration d'une methode avec le meme nom qu'un field
//
// Resultats:
//   methode déjà définie dans la classe mère en tant que field
// 
// Historique:
//    cree le 01/01/2024

class A{
    int a;
}

class B extends A{
    int a(){
        return 0;
    }
}
